Testing different input types
Text, number, colour.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
   </head>
   <body>
     <h1>World Clock</h1>
+    <div>
     <label for="first-name">What is your first name?</label>
-    <input type="text" name="" id="first-name" />
+    <input
+      type="text"
+      name=""
+      id="first-name"
+      placeholder="eg. Lily"
+      required
+      autofocus
+    />
+    </div>
+    <div>
+        <label for="age">How old are you?</label>
+    <input
+      type="number"
+      name=""
+      id="age"
+      placeholder="eg. 30"
+      required
+    />
+    </div>
+    <div>
+        <label for="fave-color">What is your favourite colour?</label>
+        <input type="color" name="" id="fave-color">
+    </div>
   </body>
 </html>
