Fixed duplicate in form HTML code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>World Clock</h1>
-    <form action="/travel"></form>
+    <form action="/travel">
     <label for="country">What country would you like to travel to?</label>
 <select name="country" id="country">
     <option value="">Select a Country</option>
