Additional JS event functionality
Call function after 3 seconds, select div and change the HTML

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div id="hello">Hello</div>
     <script>
-      function sayHello (){
-      alert("Hello");
+      function sayHello() {
+        let helloBox = document.querySelector("#hello");
+        helloBox.innerHTML = "annyeonghaseyo";
       }
-      setTimeout(sayHello, 10000);
+      setTimeout(sayHello, 3000);
     </script>
   </body>
 </html>
