Cont. with JS timing events
The difference between setTimeout and setInterval

--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
   </head>
   <body>
     <div id="hello">Hello</div>
+    <div id="date"></div>
     <script>
       function sayHello() {
         let helloBox = document.querySelector("#hello");
         helloBox.innerHTML = "annyeonghaseyo";
       }
+
+      function displayDate() {
+        let date = document.querySelector("#date");
+        date.innerHTML = new Date();
+      }
+
       setTimeout(sayHello, 3000);
+
+      displayDate();
+      setInterval(displayDate, 1000);
     </script>
   </body>
 </html>
